Implementação de adição de saldo dos clientes com base no seu salário + ajustes de alguns códigos